--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <input type="button" id="ft_to_in" value="ft to in" />
                     </p> 
                     <p id="distresult"></p>
-                    <script src="js/distance.js"></script>
+                    <script src="distance.js"></script>
                 </div><br>
                 
                 <div>
