--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <input type="button" id="kgs_to_lbs" value="kgs to lbs" />    
                     </p>
                     <p id="massresult"></p>
-                    <script src="js/mass.js"></script>
+                    <script src="mass.js"></script>
                 </div><br>
                 
                 <div>
@@ -84,7 +84,7 @@
                         <input type="button" id="k_to_f" value="K to F" />
                     </p>
                     <p id="tempresult"></p>
-                    <script src="js/temperature.js"></script>
+                    <script src="temperature.js"></script>
                 </div><br>
                 <ul class="list-unstyled">
                     <li>Copyright &copy; Cesar Jaimes 2015</li>
